Ajustando o Projeto
