# src/resources/compra/compra.types.ts
@@ -1,4 +1,0 @@
-import { PurchaseItem } from "@prisma/client";
-
-
-export type itemCompra = Pick<PurchaseItem, "quantity" | "productId">
